fixed button font mobile spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3458,7 +3458,7 @@ input[type="button"],
 		input[type="button"],
 		.button {
 			padding: 0 4em;
-			width: 15em;
+			width: 17em;
 			text-align: center;
 		}
 
